@@ -1,3 +1,8 @@
+2005-06-08  Edward Hervey  <bilboed@bilboed.com>
+
+	* pitivi/discoverer.py: (Discoverer): 
+	Added 'ready' signal for end of discovery
+
 2005-06-05  Jono Bacon <jonobacon@gmail.com>
 
 	Reviewed by : Edward Hervey  <bilboed@bilboed.com>
